@@ -5,7 +5,7 @@
  * license that can be found in the BSD_LICENSE file.
  */
 
-/* sg_pt_linux version 1.20 20131014 */
+/* sg_pt_linux version 1.21 20140603 */
 
 
 #include <stdio.h>
@@ -278,25 +278,18 @@ set_scsi_pt_task_attr(struct sg_pt_base * vp, int attribute, int priority)
 #ifndef SG_FLAG_Q_AT_TAIL
 #define SG_FLAG_Q_AT_TAIL 0x10
 #endif
-#ifndef SG_FLAG_Q_AT_HEAD
-#define SG_FLAG_Q_AT_HEAD 0x20
-#endif
 
 void
 set_scsi_pt_flags(struct sg_pt_base * vp, int flags)
 {
     struct sg_pt_linux_scsi * ptp = &vp->impl;
 
-    /* default action of SG (v3) is QUEUE_AT_HEAD */
+    /* default action of sg driver [sg v3 interface] is QUEUE_AT_HEAD */
     /* default action of block layer SG_IO ioctl is QUEUE_AT_TAIL */
-    if (SCSI_PT_FLAGS_QUEUE_AT_TAIL & flags) {
+    if (SCSI_PT_FLAGS_QUEUE_AT_TAIL & flags)
         ptp->io_hdr.flags |= SG_FLAG_Q_AT_TAIL;
-        ptp->io_hdr.flags &= ~SG_FLAG_Q_AT_HEAD;
-    }
-    if (SCSI_PT_FLAGS_QUEUE_AT_HEAD & flags) {
-        ptp->io_hdr.flags |= SG_FLAG_Q_AT_HEAD;
+    if (SCSI_PT_FLAGS_QUEUE_AT_HEAD & flags)
         ptp->io_hdr.flags &= ~SG_FLAG_Q_AT_TAIL;
-    }
 }
 
 /* Executes SCSI command (or at least forwards it to lower layers).
@@ -755,12 +748,18 @@ set_scsi_pt_task_attr(struct sg_pt_base * vp, int attribute, int priority)
 #define BSG_FLAG_Q_AT_TAIL 0x10
 #endif
 
+/* Need this later if translated to v3 interface */
+#ifndef SG_FLAG_Q_AT_TAIL
+#define SG_FLAG_Q_AT_TAIL 0x10
+#endif
+
 void
 set_scsi_pt_flags(struct sg_pt_base * vp, int flags)
 {
     struct sg_pt_linux_scsi * ptp = &vp->impl;
 
-    /* default action of bsg (sg v4) is QUEUE_AT_HEAD */
+    /* default action of bsg driver (sg v4) is QUEUE_AT_HEAD */
+    /* default action of block layer SG_IO ioctl is QUEUE_AT_TAIL */
     if (SCSI_PT_FLAGS_QUEUE_AT_TAIL & flags)
         ptp->io_hdr.flags |= BSG_FLAG_Q_AT_TAIL;
     if (SCSI_PT_FLAGS_QUEUE_AT_HEAD & flags)
@@ -931,6 +930,8 @@ do_scsi_pt_v3(struct sg_pt_linux_scsi * ptp, int fd, int time_secs,
         v3_hdr.mx_sb_len = (unsigned char)ptp->io_hdr.max_response_len;
     }
     v3_hdr.pack_id = (int)ptp->io_hdr.spare_in;
+    if (BSG_FLAG_Q_AT_TAIL & ptp->io_hdr.flags)
+        v3_hdr.flags |= SG_FLAG_Q_AT_TAIL;
 
     if (NULL == v3_hdr.cmdp) {
         if (verbose)
